@@ -82,7 +82,7 @@
 			transcoded #. The default transcoding engine for playback is
 			displayed after the name of each media file. With this checkbox you can hide that.</dd>
 
-		<dt>Hide empty/non media folders</dt>
+		<dt>Hide empty/non-media folders</dt>
 		<dd>Only display folders which contain media files</dd>
 
 		<dt>Show iTunes library</dt>
@@ -95,17 +95,17 @@
 		<dd>Only available on Mac when aperture is installed. Displays each Aperture library as a folder on your device so you can browse it.</dd>
 
 		<dt>Enable the cache</dt>
-		<dd>When you browse folders on your PS3 PMS scans each folder in
+		<dd>When you browse folders on your PS3, PMS scans each folder in
 			real time and displays the results on your PS3. Additionaly there is
-			an builtin media database which can be activated. If you scan your
-			hard drive for media files additional infos for each file will be
-			collected, e.g. MP3-tags (title, album name, etc.) for MP3 audio files.
+			a builtin cache which can be activated. If you scan your
+			hard drive for media files, additional info for each file will be
+			collected e.g. MP3 tags (title, album name, etc.) for MP3 audio files.
 			You can browse the cache in a virtual folder on your PS3
 			after scanning.</dd>
 
 		<dt>Reset cache</dt>
-		<dd>If the media database is corrupt you can use this feature to
-			reset the content of the database.</dd>
+		<dd>If the cache is corrupt you can use this feature to
+			reset the contents of the database.</dd>
 
 		<dt>Hide cache folder</dt>
 		<dd>Do not show this virtual folder on your device.</dd>
