@@ -24,6 +24,7 @@ FoldTab.18=File order:
 FoldTab.19=DVD ISO thumbnails
 FoldTab.20=ASCIIbetical
 FoldTab.21=Image thumbnails
+FoldTab.22=Alphanumeric
 FoldTab.23=Download from amazon.com
 FoldTab.24=Download from discogs.com
 FoldTab.26=Audio thumbnails display: 
